--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,15 +1,17 @@
 .Header {
+  width: 100vw;
   height: 56px;
   background: #ffffff;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  padding: 0px 18.75vw;
   .title {
     font-family: "Inter";
     font-style: normal;
     font-weight: bold;
     font-size: 1.25rem;
     color: #4f4f4f;
+    margin-right: 34.8vw;
   }
   nav {
     ul {
@@ -24,10 +26,36 @@
         font-weight: bold;
         font-size: 1rem;
         color: #616269;
+        width: 60px;
       }
       li:nth-child(-n + 2) {
-        margin-right: 48px;
+        padding-right: 48px;
       }
+      li:last-child {
+        padding-right: 46px;
+      }
+    }
+  }
+
+  .login-container {
+    display: flex;
+    background: #ffffff;
+    font-family: "SUIT";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 0.875rem;
+    .loginBtn {
+      border: 1px solid #e4e9ed;
+      color: #616269;
+      margin-right: 8px;
+      border-radius: 19px;
+      padding: 6px 16px;
+    }
+    .signUpBtn {
+      border: 1px solid #00cb8e;
+      color: #00cb8e;
+      border-radius: 19px;
+      padding: 6px 16px;
     }
   }
 }
