--- a/src/pages/StoryList/StoryList.scss
+++ b/src/pages/StoryList/StoryList.scss
@@ -31,10 +31,10 @@
       width: 100%;
       margin-bottom: 180px;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
       row-gap: 38px;
       column-gap: 24px;
-      overflow-y: scroll;
+      //   overflow-y: scroll;
     }
   }
 }
