--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -7,12 +7,11 @@
   background: #ffffff;
   border: 1px solid #e4e9ed;
   border-radius: 10px;
+  color: #b1b5be;
+  box-sizing: border-box;
+  padding-left: 16px;
 }
 
 .inputBox:focus {
   border-color: #333333;
-}
-
-.inputBox[type="text"] {
-  padding-left: 16px;
 }
