Style : 글쓰기 화면 box-sizing 수정

--- a/src/pages/WriteArticle/WriteArticle.scss
+++ b/src/pages/WriteArticle/WriteArticle.scss
@@ -157,6 +157,8 @@
           resize: none;
           overflow-y: scroll;
           padding: 14px 0 0 16px;
+
+          box-sizing: border-box;
         }
       }
 
