--- a/src/components/SignUpInput/SignUpInput.scss
+++ b/src/components/SignUpInput/SignUpInput.scss
@@ -25,9 +25,9 @@
         }
         .signUpInputStep1-content {
           box-sizing: border-box;
-          padding: 0 48px;
+          padding: 0 48px 48px 48px;
           width: 480px;
-          height: 713px;
+          // height: 713px;
           background: #ffffff;
           border: 1px solid #eef1f4;
           border-radius: 10px;
@@ -35,7 +35,58 @@
           .signUpInputStep1-input {
             text-align: left;
             margin-bottom: 24px;
+
+            .signUpInputStep1-input-double-check {
+              display: grid;
+              grid-template-columns: 3fr 1fr;
+              input {
+                width: 100%;
+                height: 48px;
+
+                font-family: "SUIT";
+                font-weight: 500;
+                font-size: 1rem;
+
+                background: #ffffff;
+                border: 1px solid #e4e9ed;
+                box-sizing: border-box;
+                border-radius: 10px 0 0 10px;
+                padding-left: 16px;
+
+                -webkit-appearance: none;
+              }
+
+              input:focus {
+                border-color: #333333;
+              }
+
+              button {
+                width: 96px;
+                height: 48px;
+
+                background: #00cb8e;
+                border-radius: 0px 10px 10px 0px;
+                border: 0;
+
+                font-family: "SUIT";
+                font-weight: 500;
+                font-size: 1rem;
+                color: #ffffff;
+              }
+            }
+
+            .signUpInputStep1-input-double-check-error {
+              border: 1px solid #ee0909;
+              border-radius: 10px;
+            }
+            .signUpInputStep1-input-error {
+              margin-top: 8px;
+              font-weight: 400;
+              font-size: 0.75rem;
+              color: #ee0909;
+            }
           }
+
           .signUpInputStep1-btn {
             width: 100%;
             height: 56px;
@@ -74,6 +125,31 @@
             text-align: left;
             margin-bottom: 24px;
 
+            .signUpInputStep2-input-genderbtns {
+              display: grid;
+              grid-template-columns: 1fr 1fr;
+              height: 48px;
+              button {
+                font-family: "SUIT";
+                font-weight: 600;
+                font-size: 15px;
+                color: #4f4f4f;
+                background: #ffffff;
+              }
+              .male {
+                border: 1px solid #e4e9ed;
+                border-radius: 10px 0px 0px 10px;
+              }
+              .female {
+                border: 1px solid #e4e9ed;
+                border-radius: 0px 10px 10px 0px;
+              }
+              .selectedGender {
+                border-color: #00cb8e;
+                color: #00cb8e;
+              }
+            }
+
             .signUpInputStep2-hashtag-input {
               box-sizing: border-box;
               width: 100%;
@@ -86,7 +162,6 @@
               font-family: "SUIT";
               font-weight: 500;
               font-size: 1rem;
-              color: #b1b5be;
             }
             .signUpInputStep2-hashtag {
               display: flex;
@@ -107,6 +182,13 @@
             .signUpInputStep2-hashtag-list {
               display: flex;
               margin-top: 12px;
+            }
+
+            .signUpInputStep2-input-error {
+              margin-top: 8px;
+              font-weight: 400;
+              font-size: 0.75rem;
+              color: #ee0909;
             }
           }
           .signUpInputStep2-btn-container {
