FIX : 회원가입 정보 입력창 태그 에러 코드 추가

--- a/src/components/SignUpInput/SignUpInput.scss
+++ b/src/components/SignUpInput/SignUpInput.scss
@@ -114,9 +114,8 @@
         }
         .signUpInputStep2-content {
           box-sizing: border-box;
-          padding: 0 48px;
+          padding: 0 48px 48px 48px;
           width: 480px;
-          height: 607px;
           background: #ffffff;
           border: 1px solid #eef1f4;
           border-radius: 10px;
