FIX : 회원가입 정보입력 컴포넌트 스타일 수정 및 state 변경에 따른 에러 화면 오류 처리

--- a/src/components/SignUpInput/SignUpInput.scss
+++ b/src/components/SignUpInput/SignUpInput.scss
@@ -168,7 +168,6 @@
               padding: 4px 8px;
               min-width: 66px;
               height: 25px;
-
               background: #eef1f4;
               border-radius: 3px;
               border: 0;
@@ -179,8 +178,12 @@
             }
 
             .signUpInputStep2-hashtag-list {
-              display: flex;
+              width: 100%;
+              display: grid;
               margin-top: 12px;
+              row-gap: 8px;
+              grid-template-columns: repeat(auto-fill, minmax(66px, 1fr));
+              overflow: scroll;
             }
 
             .signUpInputStep2-input-error {
