--- a/src/components/StoryDetailTitle/StoryDetailTitle.scss
+++ b/src/components/StoryDetailTitle/StoryDetailTitle.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   background: #f8f9fb;
-  padding: 60px 360px 0 360px;
+  padding: 60px 18.75vw 0 18.75vw;
   font-family: "SUIT";
   font-weight: 600;
 
@@ -39,6 +39,7 @@
 
   .storyDetailTitle-texts {
     margin-bottom: 24px;
+
     .storyDetailTitle-title {
       font-size: 2.5rem;
       line-height: 50px;
@@ -56,49 +57,53 @@
   }
   .storyDetailTitle-userInfo {
     display: flex;
-
-    img {
-      width: 28px;
-      height: 28px;
-      border-radius: 15px;
-      margin-right: 8px;
-    }
-    .storyDetailTitle-name {
-      font-size: 0.9375rem;
-      line-height: 19px;
+    justify-content: space-between;
+    .storyDetailTitle-userInfo-left {
       display: flex;
-      align-items: center;
-      color: #191919;
-      margin-right: 14px;
-    }
-    .storyDetailTitle-date {
-      font-weight: 500;
-      font-size: 0.9375rem;
-      line-height: 19px;
-      display: flex;
-      align-items: center;
-      color: #b1b5be;
-      margin-right: 840px;
-    }
-
-    .storyDetailTitle-btns {
-      display: flex;
-      .storyDetailTitle-btn {
-        box-sizing: border-box;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 55px;
-        height: 31px;
-
-        border: 1px solid #e4e9ed;
-        border-radius: 29px;
+      img {
+        width: 28px;
+        height: 28px;
+        border-radius: 15px;
+        margin-right: 8px;
+      }
+      .storyDetailTitle-name {
+        white-space: nowrap;
         font-size: 0.9375rem;
-
-        color: #616269;
+        line-height: 19px;
+        display: flex;
+        align-items: center;
+        color: #191919;
+        margin-right: 14px;
+      }
+      .storyDetailTitle-date {
         font-weight: 500;
+        font-size: 0.9375rem;
+        line-height: 19px;
+        display: flex;
+        align-items: center;
+        color: #b1b5be;
+      }
+    }
+    .storyDetailTitle-userInfo-right {
+      .storyDetailTitle-btns {
+        display: flex;
+        .storyDetailTitle-btn {
+          box-sizing: border-box;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 55px;
+          height: 31px;
 
-        background-color: #f8f9fb;
+          border: 1px solid #e4e9ed;
+          border-radius: 29px;
+          font-size: 0.9375rem;
+
+          color: #616269;
+          font-weight: 500;
+
+          background-color: #f8f9fb;
+        }
       }
     }
   }
