--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -2,12 +2,31 @@
   display: flex;
 
   .gallery-view {
+    position: relative;
     img {
       width: 702px;
       height: 456px;
       border-radius: 10px;
     }
     margin-right: 12px;
+    .gallery-view-number {
+      position: absolute;
+      width: 56px;
+      height: 29px;
+      right: 0;
+      top: 0;
+      margin: 16px 28px 0 0;
+      background: #000000;
+      // opacity: 0.4;
+      border-radius: 20px;
+
+      font-family: "SUIT";
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #ffffff;
+    }
   }
 
   .gallery-list {
