--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,9 @@
   background: #ffffff;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0px 19.115vw;
   .title {
     box-sizing: border-box;
     font-family: "Inter";
@@ -14,7 +16,6 @@
     color: #4f4f4f;
     // padding: 0px 34.8vw 0px 18.75vw;
     white-space: nowrap;
-    background-color: pink;
   }
   .header-left {
     display: flex;
@@ -56,7 +57,6 @@
         background: #ffffff;
         font-family: "SUIT";
         font-weight: 500;
-        // font-size: 0.73vw;
         font-size: 0.875rem;
       }
       .loginBtn {
