--- a/src/components/Slide/Slider.scss
+++ b/src/components/Slide/Slider.scss
@@ -1,24 +1,58 @@
 .slider-area {
   position: relative;
   overflow: hidden;
-  height: auto;
-}
-.slider {
-  position: relative;
-  display: block;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-  -webkit-tap-highlight-color: transparent;
+  .slider {
+    position: relative;
+    -moz-box-sizing: border-box;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -ms-touch-action: pan-y;
+    touch-action: pan-y;
+    -webkit-tap-highlight-color: transparent;
 
-  overflow: hidden;
+    overflow: hidden;
+  }
+
+  .slider-btn {
+    position: absolute;
+    box-sizing: border-box;
+    width: 94px;
+    height: 32px;
+    right: 45%;
+    bottom: 0;
+    margin: 0 0 44px 0;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 2;
+
+    font-family: "SUIT";
+    font-weight: 500;
+    font-size: 16px;
+
+    color: #ffffff;
+
+    box-sizing: border-box;
+
+    .slider-btn-arrow {
+      border: 0;
+      background: transparent;
+      padding: 0 12px;
+
+      img {
+        width: 6px;
+        height: 12px;
+      }
+    }
+  }
 }
 
 .slider-list {
@@ -30,7 +64,6 @@
 
 .slider-track {
   position: relative;
-  position: relative;
   left: 50%;
   top: 0;
   display: flex;
@@ -41,48 +74,14 @@
 
 .slider-item {
   position: relative;
-  height: 100%;
-  padding: 0 12px;
+  width: 100vw;
+  height: 450px;
+
   float: left;
-  -webkit-filter: brightness(50%);
-  filter: brightness(50%);
+  // -webkit-filter: brightness(50%);
+  // filter: brightness(50%);
 }
 
-.btn-slide-control {
-  position: absolute;
-  top: calc(50% - 30px);
-  padding: 20px 4px;
-  z-index: 1;
-  background-color: white;
-  width: 30px;
-  height: 60px;
-  opacity: 0.5;
-  border-radius: 15px;
-}
-
-.btn-prev {
-  transform: rotate(180deg);
-  left: calc((100% - 1200px) / 2);
-}
-
-.btn-next {
-  right: calc((100% - 1200px) / 2);
-}
-
-.slider-item div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 300px;
-  color: white;
-  justify-content: center;
-  font-size: 60px;
-  font-weight: bold;
-}
-.slider-item span {
-  font-size: 18px;
-  margin-bottom: 1rem;
-}
 .current-slide {
   -webkit-filter: none;
   filter: none;
