--- a/src/components/IntroductionPages/Scene4/Scene4.scss
+++ b/src/components/IntroductionPages/Scene4/Scene4.scss
@@ -3,7 +3,8 @@
   height: 100vh;
 
   box-sizing: border-box;
-  padding: 189px 360px 0 360px;
+  // padding: 245px 18.75vw 0 18.75vw;
+  padding: 12.76042vw 18.75vw 0 18.75vw;
 
   display: flex;
   .scene4-textbox {
