--- a/src/components/ProfileSettingMenuList/ProfileSettingMenuList.scss
+++ b/src/components/ProfileSettingMenuList/ProfileSettingMenuList.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 
   width: 282px;
+  height: 282px;
 
   padding: 39px 24px 80px 24px;
 
@@ -28,7 +29,7 @@
       font-weight: 600;
       font-size: 16px;
       color: #616269;
-      //   color: #00cb8e;
+      cursor: pointer;
     }
     .profilesettingCurrent {
       color: #00cb8e;
