--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,18 +1,13 @@
 .footer {
   background: #eef1f4;
-  //   width: 100%;
-  height: 145px;
+  width: 100vw;
+  height: 225px;
   display: flex;
+  box-sizing: border-box;
   padding-left: 18.75vw;
-  &.fixed {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-  }
 
   .footer-title {
     font-family: "Inter";
-    font-style: normal;
     font-weight: bold;
     font-size: 1.75rem;
     color: #828282;
@@ -24,7 +19,6 @@
     display: inline-block;
     text-align: left;
     font-family: "SUIT";
-    font-style: normal;
     font-weight: 500;
     font-size: 0.8125rem;
     color: #616269;
