--- a/src/components/ImageUploader/ImageUploader.scss
+++ b/src/components/ImageUploader/ImageUploader.scss
@@ -16,6 +16,7 @@
     color: transparent;
 
     position: relative;
+    cursor: pointer;
   }
   input::file-selector-button {
     display: none;
@@ -58,6 +59,7 @@
       width: 100%;
       height: 100%;
       border-radius: 10px;
+      cursor: grab;
     }
     .imagedeleteBtn {
       position: absolute;
