--- a/src/components/IntroductionPages/Scene3/Scene3.scss
+++ b/src/components/IntroductionPages/Scene3/Scene3.scss
@@ -6,7 +6,8 @@
   background-position: center;
 
   position: relative;
-  padding: 136px 360px 0 360px;
+  // padding: 136px 18.75vw 0 18.75vw;
+  padding: 7.083vw 18.75vw 0 18.75vw;
   text-align: left;
   box-sizing: border-box;
 
@@ -31,7 +32,8 @@
   }
 
   .scene3-cardlist {
-    margin-top: 80px;
+    // margin-top: 80px;
+    margin-top: 4.1666666667vw;
     display: flex;
     justify-content: space-between;
   }
