--- a/src/components/ProfileEdit/ProfileEdit.scss
+++ b/src/components/ProfileEdit/ProfileEdit.scss
@@ -1,8 +1,8 @@
 .profileEdit {
   box-sizing: border-box;
 
-  width: 894px;
-  //   height: 410px;
+  // width: 894px;
+  width: 100%;
   padding: 40px 2.5vw 60px 2.5vw;
 
   background: #ffffff;
