--- a/src/components/Slide/SliderItem.scss
+++ b/src/components/Slide/SliderItem.scss
@@ -1,5 +1,9 @@
 .slider-item {
   img {
+    // object-fit: fill;
+    // object-fit: contain;
+    object-fit: cover;
+    object-position: center;
     width: 100%;
     height: 100%;
     border-radius: 4px;
