--- a/src/components/StoryCard/StoryCard.scss
+++ b/src/components/StoryCard/StoryCard.scss
@@ -1,8 +1,8 @@
 .storycard {
   //   min-width: 200px;
-  //   min-height: 430px;
   max-width: 328px;
-  max-height: 430px;
+  height: 430px;
+  // max-height: 430px;
   background: #ffffff;
   box-shadow: 0px 4px 20px rgba(17, 17, 18, 0.03);
   border-radius: 10px;
@@ -10,6 +10,8 @@
   flex-direction: column;
   align-items: flex-start;
 
+  box-sizing: border-box;
+  transition: all 0.2s;
   cursor: pointer;
   .storycard-profile {
     display: flex;
@@ -20,8 +22,8 @@
       border-radius: 25px;
       width: 28px;
       height: 28px;
-      //   width: 1.4583vw;
-      //   height: 1.4583vw;
+      // width: 1.4583vw;
+      // height: 1.4583vw;
     }
 
     .storycard-info {
@@ -38,8 +40,11 @@
     }
   }
   .storycard-image {
+    width: 100%;
     img {
       width: 100%;
+      height: 188px;
+      object-fit: cover;
     }
   }
   .storycard-detail {
@@ -48,9 +53,9 @@
     justify-content: space-between;
     height: 100%;
     .storycard-contents {
-      padding: 12px 0 0 12px;
+      padding: 12px 12px 0 12px;
       text-align: left;
-      height: 138px;
+      //   height: 138px;
       .storycard-tag {
         display: inline-block;
         margin-bottom: 10px;
@@ -70,6 +75,8 @@
         font-size: 1.125rem;
       }
       .storycard-content {
+        margin-bottom: 16px;
+
         text-overflow: ellipsis;
         overflow: hidden;
 
@@ -91,8 +98,7 @@
       font-size: 0.75rem;
       display: flex;
       color: #191919;
-      margin: 0 0 16px 12px;
-
+      padding: 0 0 16px 12px;
       span {
         padding-left: 5px;
         &.liked {
@@ -101,7 +107,6 @@
       }
       button {
         cursor: pointer;
-
         border: none;
         background: url("../../assets/imgs/like.jpg");
         background-size: contain;
@@ -119,4 +124,5 @@
 
 .storycard:hover {
   border: 1px solid #00cb8e;
+  transform: translateY(-20px);
 }
