--- a/src/components/StoryDetailTitle/StoryDetailTitle.scss
+++ b/src/components/StoryDetailTitle/StoryDetailTitle.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   background: #f8f9fb;
-  padding: 60px 18.75vw 0 18.75vw;
+  padding: 60px 18.75vw 46px 18.75vw;
   font-family: "SUIT";
   font-weight: 600;
 
