--- a/src/components/ToggleBtn/ToggleBtn.scss
+++ b/src/components/ToggleBtn/ToggleBtn.scss
@@ -1,7 +1,7 @@
 .toggle {
   display: inline-block;
-  padding: 0.625vw 1.25vw;
-  width: 5.52vw;
+  padding: 0.625vw 1.67vw;
+  // width: 5.52vw;
   border-radius: 30px;
 
   font-family: "SUIT";
