--- a/src/pages/StoryDetail/StoryDetail.scss
+++ b/src/pages/StoryDetail/StoryDetail.scss
@@ -2,7 +2,7 @@
   margin-bottom: 120px;
   .storyDetail-title {
     width: 100vw;
-    height: 274px;
+    // height: 274px;
   }
 
   .storyDetail-content {
