--- a/src/pages/WriteArticle/WriteArticle.scss
+++ b/src/pages/WriteArticle/WriteArticle.scss
@@ -1,4 +1,5 @@
 .writearticle {
+  width: 100vw;
   min-height: calc(100vh - 281px);
   background-color: #f8f9fb;
   display: flex;
@@ -7,6 +8,9 @@
   justify-content: center;
 
   padding-bottom: 100px;
+
+  box-sizing: border-box;
+  position: relative;
   .writearticle-box {
     display: flex;
     flex-direction: column;
@@ -32,7 +36,6 @@
         font-family: "SUIT";
         font-weight: 500;
         font-size: 1rem;
-        color: #b1b5be;
       }
       .writearticle-hashtag {
         display: flex;
@@ -57,8 +60,6 @@
 
       li {
         display: flex;
-        align-items: center;
-
         margin-bottom: 10px;
         font-family: "SUIT";
         font-weight: 600;
@@ -70,6 +71,7 @@
           word-wrap: normal;
           overflow-wrap: normal;
           white-space: nowrap;
+          margin-top: 17px;
 
           width: 10%;
         }
@@ -126,7 +128,7 @@
             .writearticle-calendarBtn::before {
               content: "직접 지정";
               position: absolute;
-              transform: translateX(-0vw) translateY(-280%);
+              transform: translateX(-0vw) translateY(-250%);
               font-family: "SUIT";
               font-weight: 500;
               font-size: 0.75rem;
@@ -170,4 +172,13 @@
       }
     }
   }
+}
+
+.error-message {
+  font-family: "SUIT";
+  font-weight: 400;
+  font-size: 13px;
+  margin-top: 12px;
+  color: #ee0909;
+  text-align: left;
 }
