--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,7 @@
 .Header {
   width: 100vw;
   height: 56px;
-  overflow: hidden;
+  // overflow: hidden;
   background: #ffffff;
   display: flex;
   align-items: center;
