--- a/src/components/IntroductionPages/Scene3/InfoCard/InfoCard.scss
+++ b/src/components/IntroductionPages/Scene3/InfoCard/InfoCard.scss
@@ -2,7 +2,7 @@
   position: relative;
   // width: 384px;
   width: 20vw;
-  height: 462px;
+  height: 46.5726vh;
 
   background: #f8f9fb;
 
@@ -21,8 +21,8 @@
   transition: all 0.1s;
 
   .infoCard-image {
-    height: 280px;
-
+    // height: 280px;
+    height: 28vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,23 +30,28 @@
     img {
       border-radius: 10px 10px 0 0;
       width: 20vw;
-      height: 284px;
+      height: 28.63vh;
+      // height: 284px;
     }
   }
 
   .infoCard-small {
     img {
       width: 10.3125vw;
-      height: 187px;
+      // height: 187px;
+      height: 18.851vh;
     }
   }
   .infoCard-text {
-    height: 182px;
-    padding: 40px 20px;
+    // height: 182px;
+    height: 18.3468vh;
+    // padding: 40px 20px;
+    padding: 4.0322vh 1.0416vw;
     box-sizing: border-box;
     .infoCard-title {
       text-align: center;
-      margin-bottom: 30px;
+      // margin-bottom: 30px;
+      margin-bottom: 3.0241vh;
     }
     .infoCard-content {
       font-weight: 400;
