--- a/src/components/IntroductionPages/Scene4/Scene4.scss
+++ b/src/components/IntroductionPages/Scene4/Scene4.scss
@@ -15,12 +15,14 @@
     color: #191919;
     text-align: left;
 
-    margin-right: 45px;
+    // margin-right: 45px;
+    margin-right: 2.3437vw;
     .scene4-title {
       position: relative;
       line-height: 42px;
 
-      margin-bottom: 74px;
+      // margin-bottom: 74px;
+      margin-bottom: 7.46vh;
     }
     .scene4-title::before {
       content: "";
@@ -36,7 +38,8 @@
       font-size: 22px;
       line-height: 33px;
 
-      margin-bottom: 40px;
+      // margin-bottom: 40px;
+      margin-bottom: 4.032vh;
     }
     .scene4-answer {
       font-weight: 500;
