--- a/src/components/Slide/Slider.scss
+++ b/src/components/Slide/Slider.scss
@@ -75,11 +75,11 @@
 .slider-item {
   position: relative;
   width: 100vw;
-  height: 450px;
+  // height: 550px;
+  // height: 500px;
+  height: 600px;
 
   float: left;
-  // -webkit-filter: brightness(50%);
-  // filter: brightness(50%);
 }
 
 .current-slide {
