--- a/src/components/Slide/SliderItem.scss
+++ b/src/components/Slide/SliderItem.scss
@@ -2,12 +2,13 @@
   img {
     // object-fit: fill;
     // object-fit: contain;
-    object-fit: cover;
+    // object-fit: cover;
+    // object-fit: scale-down;
+    object-fit: inherit;
     object-position: center;
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    max-height: 450px;
     -webkit-user-drag: none;
     -khtml-user-drag: none;
     -moz-user-drag: none;
