--- a/src/components/IntroductionPages/Scene2/Scene2.scss
+++ b/src/components/IntroductionPages/Scene2/Scene2.scss
@@ -13,6 +13,7 @@
     background-size: cover;
     position: absolute;
     bottom: 0;
+    z-index: -1;
   }
 
   .scene2-left {
@@ -22,7 +23,8 @@
     color: #191919;
 
     text-align: left;
-    padding: 84px 18.75vw;
+    // padding: 84px 18.75vw;
+    padding: 8.468vh 18.75vw;
 
     span {
       box-shadow: inset 0 -20px 0 #19e6a8;
@@ -38,6 +40,7 @@
     height: 100%;
     background-color: #00cb8e;
 
+    // padding: 136px 0 0 91px;
     padding: 136px 0 0 91px;
     text-align: left;
   }
