--- a/src/components/IntroductionPages/Scene5/Scene5.scss
+++ b/src/components/IntroductionPages/Scene5/Scene5.scss
@@ -89,6 +89,7 @@
       img {
         width: 100%;
         height: 100%;
+        border-radius: 10px;
       }
       .scene5-content-img-text {
         position: absolute;
@@ -101,13 +102,14 @@
         bottom: -22px;
         background: #00cb8e;
         border-radius: 10px;
-
+        border: 0;
         box-sizing: border-box;
         // padding: 24px;
         padding: 1.25vw;
         text-align: left;
         font-family: "SUIT";
         color: #ffffff;
+
         .scene5-content-img-name {
           font-weight: bold;
           // font-size: 28px;
