--- a/src/components/IntroductionPages/Scene5/Scene5.scss
+++ b/src/components/IntroductionPages/Scene5/Scene5.scss
@@ -25,7 +25,7 @@
   padding-top: 56px;
   .scene5-top {
     height: 295px;
-    background: url("../../../assets/imgs/Scene1/Scene1_3.jpg") no-repeat;
+    background: url("../../../assets/imgs/Scene1/Scene1_3.jpeg") no-repeat;
     background-position: 70% 50%;
     background-size: cover;
 
