--- a/src/components/Hashtag/Hashtag.scss
+++ b/src/components/Hashtag/Hashtag.scss
@@ -27,29 +27,28 @@
   font-size: 1rem;
   color: #00cb8e;
   margin-right: 4px;
-  background-color: #ffffff;
 
   background-color: transparent;
   border: 0;
   cursor: text;
 }
 .hashtagDefault {
-  display: inline-block;
+  box-sizing: border-box;
+  min-width: 66px;
+  height: 25px;
   padding: 4px 8px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
   background: #eef1f4;
   border-radius: 3px;
-  font-family: "SUIT";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  color: #616269;
   margin-right: 8px;
-
-  border: 0;
   position: relative;
-}
+  border: 0;
 
-.hashtagDefault::after {
-  content: "X";
-  padding-left: 7.75px;
+  span {
+    margin-left: 0.573vw;
+  }
 }
