--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -35,7 +35,7 @@
       grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
       row-gap: 38px;
       column-gap: 24px;
-      overflow-y: scroll;
+      overflow-y: hidden;
     }
   }
   .main-line {
