style : scss파일 공백처리 및 자잘한 디자인 수정

--- a/src/components/IntroductionPages/Scene3/InfoCard/InfoCard.scss
+++ b/src/components/IntroductionPages/Scene3/InfoCard/InfoCard.scss
@@ -2,7 +2,7 @@
   position: relative;
   // width: 384px;
   width: 20vw;
-  height: 46.5726vh;
+  // height: 46.5726vh;
 
   background: #f8f9fb;
 
@@ -46,7 +46,8 @@
     // height: 182px;
     height: 18.3468vh;
     // padding: 40px 20px;
-    padding: 4.0322vh 1.0416vw;
+    padding: 4.028vh 1.0416vw;
+    margin-bottom: 3.0211vh;
     box-sizing: border-box;
     .infoCard-title {
       text-align: center;
