--- a/src/components/ProfileDetailsEdit/ProfileDetailsEdit.scss
+++ b/src/components/ProfileDetailsEdit/ProfileDetailsEdit.scss
@@ -25,24 +25,27 @@
 
       color: #616269;
 
-      button {
+      .profileDetailsEdit-input-btn {
         width: 100%;
         height: 48px;
+        border: 1px solid #e4e9ed;
 
-        border: 0;
         background-color: #ffffff;
       }
       .profileDetailsEdit-input-box-btns {
         display: flex;
 
         .profileDetailsEdit-btn-left {
-          border: 1px solid #00cb8e;
           border-radius: 10px 0px 0px 10px;
         }
 
         .profileDetailsEdit-btn-right {
-          border: 1px solid #e4e9ed;
           border-radius: 0px 10px 10px 0px;
+        }
+
+        .profileDetailsEdit-input-active {
+          border: 1px solid #00cb8e;
+          color: #00cb8e;
         }
       }
 
@@ -58,6 +61,11 @@
         font-size: 14px;
 
         color: #616269;
+      }
+
+      .profileDetailsEdit-hashtag-list {
+        width: 100%;
+        display: flex;
       }
     }
   }
