--- a/src/components/StoryDetailTitle/StoryDetailTitle.scss
+++ b/src/components/StoryDetailTitle/StoryDetailTitle.scss
@@ -10,12 +10,14 @@
   .storyDetailTitle-cards {
     display: flex;
     margin-bottom: 16px;
+
     .dday-card {
       width: 66px;
       height: 29px;
       background: #616269;
       border-radius: 4px;
-      font-size: 1.125rem;
+      // font-size: 1.125rem;
+      font-size: 0.9375vw;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -28,7 +30,8 @@
       height: 29px;
       background: #ff4c4c;
       border-radius: 4px;
-      font-size: 1.0625rem;
+      // font-size: 1.0625rem;
+      font-size: 0.88542vw;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -40,6 +43,7 @@
   .storyDetailTitle-texts {
     margin-bottom: 24px;
 
+    text-align: left;
     .storyDetailTitle-title {
       font-size: 2.5rem;
       line-height: 50px;
