--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   display: flex;
-
+  height: 456px;
   .gallery-view {
     position: relative;
     img {
@@ -17,7 +17,7 @@
       top: 0;
       margin: 16px 28px 0 0;
       background: #000000;
-      // opacity: 0.4;
+
       border-radius: 20px;
 
       font-family: "SUIT";
@@ -32,7 +32,6 @@
   .gallery-list {
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
     li {
       width: 40px;
       height: 42px;
@@ -49,6 +48,63 @@
       .currentimg {
         border: 2px solid #191919;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .gallery {
+    height: 360px;
+
+    position: relative;
+    .gallery-view {
+      width: 100vw;
+      margin: 0;
+
+      img {
+        width: 100%;
+        height: 360px;
+      }
+    }
+
+    .gallery-list {
+      flex-direction: row;
+      height: 360px;
+
+      transition: all 0.5s ease;
+
+      li {
+        display: flex;
+        width: 100vw;
+        height: 360px;
+        margin: 0;
+
+        .currentimg {
+          border: 0;
+        }
+      }
+    }
+    .gallery-view-number {
+      position: absolute;
+      width: 56px;
+      height: 29px;
+
+      right: 0;
+      top: 0;
+      margin: 16px;
+
+      border-radius: 20px;
+      background: #000000;
+      opacity: 0.4;
+
+      font-family: "SUIT";
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #ffffff;
+
+      z-index: 100;
     }
   }
 }
